# azimuth

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  LICENSE-CONTENT.md  OKF.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  wrangler.toml
.claude/: dependency-cooldown-policy.md  settings.local.json
.github/: GOOD_FIRST_ISSUES.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: attach-domain.yml  ci.yml  deploy-cloudflare.yml  flip-readiness.yml  ingest.yml  pages.yml  secret-scan.yml  synthesis-freshness.yml
cloudflare/: _headers
docs/: LESSONS.md  README.md  architecture.md  changelog.md  cli.md  coolify-deploy.md  deploy-cloudflare.md  deploy.md  doc-links.md  faq.md  l1-ingest.md  linked-data.md  multi-tenancy.md  openapi-pattern.md  operations.md  plan.md  prediction-layer-design.md  site.md  source-guardrail.md  spec.md  synthesis.md
docs/proof/: README.md  engine-proof-2-2026-W28.md  kr-c-operating-proof-2026-W27.md
docs/security/: c1c-history-decision.md  flip-decisions.json  gitleaks-2026-06-24.md  public-flip-readiness.md  secret-scan-2026-06-30.md
docs/sources/: worldmonitor-channel-audit.md
docs/strategy/: okf-and-knowledge-graph.md
guardrail/: __init__.py  source_guardrail.py
ingest/: __init__.py  http.py  pull.py
rules/: azimuth.toml
scripts/: Build-Graphify-AST-Only.py  backfill_okf_frontmatter.py  build_answers.py  build_autonomy.py  build_benchmark.py  build_brief_index.py  build_cross_theme.py  build_graph.py  build_hero_gif.py  build_index.py  build_log.py  build_rdf.py  build_site.py  check_doc_links.py  check_doc_orphans.py  check_flip_readiness.py  check_hero_gif.py  check_ingest_liveness.py  check_site_links.py  check_sources.py  check_synthesis.py  check_synthesis_freshness.py  pull_benchmark_foils.py  query_graph.py  record_hero_gif.py  run_ingest.py  scan_private_leakage.py  scan_secrets.py  scrub-history.sh  seed_good_first_issues.py  smoke_graph.py  smoke_ui.py  smoke_whatif.py
site/: autonomy.html  autonomy.json  graph.html  graph.json
sources/: registry.json
sources/benchmark/: foils.json
src/backend/: config.py  main.py
src/backend/guardrail/: __init__.py
src/frontend/: next.config.mjs  package-lock.json  package.json
synthesis/: __init__.py  answers.py  azimuth-curator.md  benchmark.py  brief_stats.py  cross_theme.py  fire_geo.py  lint.py  site_build.py  sparkline.py
tests/integration/: test_cli_surface.py  test_history_dangling_blob.py  test_smoke.py
tests/unit/: test_answers.py  test_benchmark.py  test_build_autonomy.py  test_build_graph.py  test_build_index.py  test_build_log.py  test_build_rdf.py  test_check_doc_links.py  test_check_doc_orphans.py  test_check_flip_readiness.py  test_check_ingest_liveness.py  test_check_site_links.py  test_cli_doc_coverage.py  test_cross_theme.py  test_deploy_cloudflare.py  test_docs_index_coverage.py  test_fire_geo.py  test_flip_readiness_workflow.py  test_ingest_pull.py  test_query_graph.py  test_registry_themes.py  test_ruff_repo_clean.py  test_scan_private_leakage.py  test_scan_secrets.py  test_secret_scan_workflow.py  test_seed_good_first_issues.py  test_site_build.py  test_smoke_graph.py  test_source_guardrail.py  test_sparkline.py  test_synthesis_freshness.py  test_synthesis_lint.py  test_vault_contract.py  test_workflow_docs.py
vault/: OKF.md  README.md  context.jsonld  index.md  log.md
vault/00 Rules/: README.md  editorial.md  index.md  synthesis-contract.md
vault/01 Sources/: README.md  index.md
vault/01 Sources/2026-06-15/: crude-oil-inventories.md  energy-prices.md  fuel-prices.md  index.md  natural-gas-storage-eu.md
vault/01 Sources/2026-06-16/: crude-oil-inventories.md  earthquakes.md  energy-prices.md  fuel-prices.md  index.md  natural-gas-storage-eu.md
vault/01 Sources/2026-06-18/: crude-oil-inventories.md  earthquakes.md  energy-prices.md  fuel-prices.md  index.md  natural-gas-storage-eu.md  prediction-markets.md
vault/01 Sources/2026-06-20/: crude-oil-inventories.md  earthquakes.md  energy-prices.md  fuel-prices.md  index.md  natural-gas-storage-eu.md  prediction-markets.md
vault/01 Sources/2026-06-23/: crude-oil-inventories.md  earthquakes.md  energy-prices.md  fuel-prices.md  index.md  natural-gas-storage-eu.md  prediction-markets.md
vault/01 Sources/2026-06-24/: climate-anomalies.md  co2-monitoring.md  sea-ice-extent.md
vault/01 Sources/2026-06-25/: climate-anomalies.md  co2-monitoring.md  conflict-events-ucdp.md  crude-oil-inventories.md  crypto-quotes.md  cyber-threats.md  disease-outbreaks.md  displacement-flows.md  earthquakes.md  energy-prices.md  fuel-prices.md  internet-outages.md  maritime-navwarnings.md  natural-events.md  natural-gas-storage-eu.md  orbital-satellites.md  prediction-markets.md  radiation-observations.md  sea-ice-extent.md  thermal-escalations.md  wildfire-detections.md  world-bank-indicators.md
vault/01 Sources/2026-06-26/: climate-anomalies.md  co2-monitoring.md  conflict-events-ucdp.md  crude-oil-inventories.md  crypto-quotes.md  cyber-threats.md  disease-outbreaks.md  displacement-flows.md  earthquakes.md  energy-prices.md  fuel-prices.md  internet-outages.md  maritime-navwarnings.md  natural-events.md  natural-gas-storage-eu.md  orbital-satellites.md  prediction-markets.md  radiation-observations.md  sea-ice-extent.md  thermal-escalations.md  wildfire-detections.md  world-bank-indicators.md
vault/02 Briefs/: Benchmark.md  Climate Signals Weekly.md  Conflict Watch Weekly.md  Cyber Watch Weekly.md  Energy Supply Weekly.md  Environmental Hazards Weekly.md  Geophysical Weekly.md  Humanitarian Watch Weekly.md  Infrastructure Watch Weekly.md  Macro & Markets Weekly.md  Orbital Watch Weekly.md  Prediction Markets Weekly.md  Public Health Weekly.md  README.md  Top5 Answers.md  World Watch Weekly.md  index.md
vault/ontology/: azimuth.context.jsonld
vault_contract/: __init__.py  __main__.py
(+616 files in other folders)
