[project]
name = "azimuth"
version = "0.1.0"
description = "Public demonstrator of the HemySphere L1/L2/L3 vault doctrine, fed by Worldmonitor open-intelligence data"
requires-python = ">=3.12"
# Pure-stdlib runtime after the Phase-1 template strip (FastAPI backend + Next.js
# frontend deleted; ingest uses urllib, guardrail uses json/dataclasses). No
# third-party runtime dependency. See docs/spec.md "Template strip".
dependencies = []

[project.optional-dependencies]
# Static-site build (scripts/build_site.py -> synthesis/site_build.py). Runtime stays
# pure-stdlib except for the Markdown renderer; the Pages workflow installs this extra.
# Kept separate from `dev` so the site build need not pull the full test stack.
site = [
    "markdown>=3.7",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-benchmark>=5.0.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]  # line too long — handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["guardrail", "ingest", "scripts", "synthesis"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers -m 'not perf'"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "perf: Performance tests (excluded by default, run with: pytest -m perf)",
]

[tool.coverage.run]
source = ["guardrail", "ingest"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
