# Pin the build backend explicitly. Without this, `pip/uv ... -e .` falls back to
# setuptools auto-discovery, which on this flat layout (guardrail/ ingest/ synthesis/
# src/ site/ sources/ vault/ docs/ scripts/ tests/ all top-level) ABORTS with
# "Multiple top-level packages discovered in a flat-layout" -- exit 1. That broke the
# daily L1 ingest workflow at the install step every run (red 06-21..06-25, found via
# the external ingest watchdog). See [tool.setuptools.packages.find] below.
# setuptools>=77 gives us PEP 639 SPDX `license`/`license-files` (below). It also
# supplies the flat-layout package discovery the daily-ingest install depends on.
[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "azimuth"
version = "0.1.0"
description = "Public demonstrator of the HemySphere L1/L2/L3 vault doctrine, fed by Worldmonitor open-intelligence data"
readme = "README.md"
requires-python = ">=3.12"
# Code is MIT (PEP 639 SPDX). Vault CONTENT is CC BY 4.0 — a separate, non-code
# licence declared in LICENSE-CONTENT.md, not a packaging concern for this distribution.
license = "MIT"
license-files = ["LICENSE"]
# Name only — no e-mail. The surname is the intentional public OSS attribution
# (kept by the privacy gate); a contact address is a private-leak class, so absent.
authors = [{ name = "Michael Rarivomanana" }]
keywords = [
    "open-intelligence",
    "knowledge-graph",
    "worldmonitor",
    "open-knowledge-framework",
    "okf",
    "l1-l2-l3",
    "vault",
    "synthesis",
    "hemysphere",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# Pure-stdlib runtime after the Phase-1 template strip (FastAPI backend + Next.js
# frontend deleted; ingest uses urllib, guardrail uses json/dataclasses). No
# third-party runtime dependency. See docs/spec.md "Template strip".
dependencies = []

[project.urls]
Homepage = "https://github.com/mickywin22/azimuth"
Repository = "https://github.com/mickywin22/azimuth"
Issues = "https://github.com/mickywin22/azimuth/issues"
Documentation = "https://github.com/mickywin22/azimuth/tree/main/docs"

[project.optional-dependencies]
# Static-site build (scripts/build_site.py -> synthesis/site_build.py). Runtime stays
# pure-stdlib except for the Markdown renderer; the Pages workflow installs this extra.
# Kept separate from `dev` so the site build need not pull the full test stack.
site = [
    "markdown>=3.7",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-benchmark>=5.0.0",
    "httpx>=0.28.0",
    # Bounded, NOT floating: an unpinned `ruff>=0.9.0` let CI float to a newer formatter
    # than the pre-commit hook used, so locally-clean files reddened CI on every minor bump
    # (the recurring "ruff-format drift" that kept re-opening as KR-C). Keep this <0.16 in
    # lock-step with the `.pre-commit-config.yaml` ruff rev so local + CI format identically.
    "ruff>=0.15,<0.16",
    "mypy>=1.14,<2",
    "pre-commit>=4.0.0",
]

# Only the three real runtime packages are installable. scripts/ runs directly (adds the
# repo root to sys.path, no __init__), src/ is empty post-strip, and site/ sources/ vault/
# docs/ _site/ _smoke/ tests/ are data or test trees -- none should be auto-discovered as a
# distribution package. Explicit discovery disables the flat-layout auto-scan that aborted
# `-e .` and silently kept the daily ingest workflow red.
[tool.setuptools.packages.find]
include = ["guardrail*", "ingest*", "synthesis*"]

[tool.ruff]
target-version = "py312"
line-length = 99
[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = ["E501"]  # line too long — handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["guardrail", "ingest", "scripts", "synthesis"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers -m 'not perf'"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "perf: Performance tests (excluded by default, run with: pytest -m perf)",
]

[tool.coverage.run]
source = ["guardrail", "ingest"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
